--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "ANiStrm": {
-    "name": "ANi Strm",
+  "ANiStrm-proxy": {
+    "name": "ANi Strm-proxy",
     "description": "自动获取当季所有番剧，生成strm文件，mp刮削入库，emby直接播放，免去下载，轻松拥有一个番剧媒体库",
-    "version": "2.4.2",
+    "version": "2.5.5",
     "v2": true,
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/anistrm.png",
     "author": "honue",
